--- a/agify.html
+++ b/agify.html
@@ -31,10 +31,12 @@
           placeholder="1"
         />
         <label for="names"
-          >Which is (are) the name(s) that you're interested in? If you're
-          interested in knowing the age prediction of multiple names, separate
-          them with just a comma!</label
+          >Which is (are) the name(s) that you're interested in?</label
         >
+        <p class="additional-info">
+          If you're interested in knowing the age prediction of multiple names,
+          separate them with just a comma!
+        </p>
         <input
           type="text"
           id="names"
