--- a/agify.html
+++ b/agify.html
@@ -47,6 +47,6 @@
       </form>
       <div class="loader"></div>
     </div>
-    <script src="./scripts/agify.js"></script>
+    <script src="./scripts/script-agify.js"></script>
   </body>
 </html>
