--- a/cocktails.html
+++ b/cocktails.html
@@ -32,6 +32,6 @@
       </form>
       <div class="loader"></div>
     </div>
-    <script src="./scripts/cocktails.js"></script>
+    <script src="./scripts/script-cocktails.js"></script>
   </body>
 </html>
