--- a/kanye.html
+++ b/kanye.html
@@ -24,6 +24,6 @@
       </form>
       <div class="loader"></div>
     </div>
-    <script src="./scripts/kanye.js"></script>
+    <script src="./scripts/script-kanye.js"></script>
   </body>
 </html>
