--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>API FORMS</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div class="content">
