--- a/kanye.html
+++ b/kanye.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KANYE</title>
     <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/agify_cocktails_kanye.css" />
     <link rel="stylesheet" href="./styles/kanye.css" />
   </head>
   <body>
