--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <div class="container">
         <h1>KANYE</h1>
         <p>Generates a random Kanye quote.</p>
-        <button><a href="./kanye.html">GO</a></button>
+        <a href="./kanye.html">
+          <button>GO</button>
+        </a>
       </div>
     </div>
   </body>
