--- a/kanye.html
+++ b/kanye.html
@@ -20,10 +20,10 @@
       </ul>
     </div>
     <div class="content">
-      <form action="#">
+      <div class="container">
         <h1>Generate yourself a Kanye quote for the day!</h1>
-        <button><a href="#">GENERATE</a></button>
-      </form>
+        <button id="generate-button">GENERATE</button>
+      </div>
       <div class="loader"></div>
     </div>
     <script src="./scripts/script-kanye.js"></script>
