--- a/agify.html
+++ b/agify.html
@@ -20,33 +20,16 @@
       </ul>
     </div>
     <div class="content">
-      <form action="#">
-        <label for="quantity"
-          >For how many names would you like to predict the age of?</label
-        >
-        <input
-          type="number"
-          id="quantity"
-          name="name_quantity"
-          min="1"
-          max="10"
-          placeholder="1"
-        />
-        <label for="names"
-          >Which is (are) the name(s) that you're interested in?</label
-        >
+      <div class="container">
+        <label id="quantity-label" for="quantity">For how many names would you like to predict the age of?</label>
+        <input id="quantity-input" type="number" id="quantity" name="name_quantity" min="1" max="10" placeholder="1" />
+        <label id="names-label" for="names">Which is (are) the name(s) that you're interested in?</label>
         <p class="additional-info">
-          If you're interested in knowing the age prediction of multiple names,
-          separate them with just a comma!
+          If you're interested in knowing the age prediction of multiple names, separate them with just a comma!
         </p>
-        <input
-          type="text"
-          id="names"
-          name="input_names"
-          placeholder="e.g. 'Emma,Michael'"
-        />
-        <a><input type="submit" value="SUBMIT" /></a>
-      </form>
+        <input id="names-input" type="text" id="names" name="input_names" placeholder="e.g. 'Emma,Michael'" />
+        <button id="submit-button">SUBMIT</button>
+      </div>
       <div class="loader"></div>
     </div>
     <script src="./scripts/script-agify.js"></script>
