--- a/cocktails.html
+++ b/cocktails.html
@@ -20,18 +20,20 @@
       </ul>
     </div>
     <div class="content">
-      <form action="#">
+      <div class="container">
         <h1>Time to get a drink after a long day?</h1>
         <h2>Find your favorite cocktail recipe NOW!</h2>
-        <label for="cocktail">Choose a search method:</label>
-        <select id="cocktail" name="cocktail">
-          <option disabled selected value></option>
-          <option value="by-name">Search By Name</option>
-          <option value="by-ingredient">Search By Ingredient</option>
-          <option value="by-random">Search By Random</option>
-        </select>
-        <a id="submit"><input type="submit" value="SUBMIT" /></a>
-      </form>
+        <label id="select-label" for="cocktail">Choose a search method:</label>
+        <div class="select">
+          <select id="search-method" name="search-method">
+            <option disabled selected value>...</option>
+            <option value="by-name">Search By Name</option>
+            <option value="by-ingredient">Search By Ingredient</option>
+            <option value="by-random">Search By Random</option>
+          </select>
+        </div>
+        <button id="submit-button">SUBMIT</button>
+      </div>
       <div class="loader"></div>
     </div>
     <script src="./scripts/script-cocktails.js"></script>
