--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       <div class="container">
         <h1>AGIFY</h1>
         <p>Predicts age based on a name given.</p>
-        <button><a href="./agify.html">GO</a></button>
+        <a href="./agify.html"><button>GO</button></a>
       </div>
       <div class="container">
         <h1>COCKTAILS</h1>
         <p>Searches for different cocktail recipes.</p>
-        <button><a href="./cocktails.html">GO</a></button>
+        <a href="./cocktails.html"><button>GO</button></a>
       </div>
       <div class="container">
         <h1>KANYE</h1>
         <p>Generates a random Kanye quote.</p>
-        <button><a href="./kanye.html">GO</a></button>
+        <a href="./kanye.html"><button>GO</button></a>
       </div>
     </div>
   </body>
