--- a/cocktails.html
+++ b/cocktails.html
@@ -23,10 +23,10 @@
       <div class="container">
         <h1>Time to get a drink after a long day?</h1>
         <h2>Find your favorite cocktail recipe NOW!</h2>
-        <label id="select-label" for="cocktail">Choose a search method:</label>
+        <label id="select-label" for="search-method">Choose a search method:</label>
         <div class="select">
-          <select id="search-method" name="search-method">
-            <option disabled selected value>...</option>
+          <select id="search-method" name="search-method" required>
+            <option disabled selected value="">...</option>
             <option value="by-name">Search By Name</option>
             <option value="by-ingredient">Search By Ingredient</option>
             <option value="by-random">Search By Random</option>
